feat: aggiunte le classi PostService per il business logic dei post e PostController per esporre gli endpoint